--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,12 +18,34 @@ body {
     color: #1c1819;
     line-height: 1.5;
     font-size: 16px;
+    position: relative;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: #1c1819;
+}
+
+button {
+    cursor: pointer;
 }
 
 .content {
     max-width: 1400px;
     margin: auto;
-    margin-top: 32px;
+    padding: 34px 90px 0 20px;
+}
+
+.showcase {
+    width: 1040px;
+    display: flex;
+    flex-direction: row;
+    gap: 70px;
+    margin-bottom: 190px;
 }
 
 /* HEADER */
@@ -40,6 +62,10 @@ header {
     align-items: center;
     justify-content: flex-start;
     gap: 70px;
+}
+
+header .logo {
+    padding-left: 12px;
 }
 
 .active-bar {
@@ -79,6 +105,18 @@ header {
     font-size: 18px;
 }
 
+.search:focus-within {
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0 0 0 1px grey;
+    outline: none;
+    transition: 0.1s;
+}
+
+.search:active input::placeholder {
+    color: #f33;
+}
+
 .search input::placeholder {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
@@ -91,6 +129,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.user:hover {
+    color: #f33;
 }
 
 .user img {
@@ -113,3 +155,292 @@ header {
 /* NAVBAR */
 
 /* NAVBAR */
+
+nav {
+    min-width: 215px;
+    margin-top: 32px;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+nav ul li {
+    padding: 8px;
+    border-left: 4px solid #fff;
+}
+
+nav ul li:hover {
+    border-left: 4px solid #2a81dd;
+}
+
+nav ul .active {
+    border-left: 4px solid #2a81dd;
+}
+
+nav ul li a {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+nav ul li .kolesateam,
+nav ul li .kolesashop {
+    font-weight: 600;
+}
+
+/* SECTION */
+
+/* SECTION */
+
+/* SECTION */
+
+section {
+    margin-top: 26px;
+}
+
+.banner {
+    margin-bottom: 24px;
+}
+
+/* HOTBUTTONS */
+
+.hotbuttons {
+    display: flex;
+    height: 76px;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.hotbutton1,
+.hotbutton2,
+.hotbutton3 {
+    width: 330px;
+    height: 76px;
+    border-radius: 16px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 32px;
+    border: none;
+    position: relative;
+}
+
+.hotbutton1 {
+    background: #eff8eb;
+}
+
+.hotbutton1:hover {
+    background: #e3f3dc;
+}
+
+.hotbutton2 {
+    background: #fffae7;
+}
+
+.hotbutton2:hover {
+    background: #fff6d3;
+}
+
+.hotbutton3 {
+    background: #e9f2fb;
+}
+
+.hotbutton3:hover {
+    background: #d8e8f8;
+}
+
+.hotbutton1 img {
+    position: absolute;
+    left: 20px;
+    top: 18px;
+}
+
+.hotbutton2 img {
+    position: absolute;
+    left: 15px;
+    top: 18px;
+}
+
+.hotbutton3 img {
+    position: absolute;
+    left: 20px;
+    top: 18px;
+}
+
+/* RADIOBUTTONS */
+
+.radiobuttons {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 9px;
+    margin-bottom: 16px;
+}
+
+.radiobuttons input {
+    display: none;
+}
+
+.radiobuttons label {
+    border: 1px #f4f4f4 solid;
+    border-radius: 8px;
+    background: #fff;
+    color: #2a81dd;
+    padding: 8px 24px;
+    cursor: pointer;
+}
+
+.radiobuttons label:hover {
+    background: #d6ecfb;
+    color: #1c1819;
+}
+
+.radiobuttons input:checked + label {
+    background: #d6ecfb;
+    color: #1c1819;
+}
+
+/* OPTIONS */
+
+.options {
+    max-width: 1040px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
+.options .option {
+    cursor: pointer;
+    width: 330px;
+}
+
+.options .option .option-points {
+    padding: 16px 16px 8px;
+    color: #2a81dd;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+}
+
+.options .option .option-description {
+    padding: 0 16px;
+    color: #1c1819;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+}
+
+.options .option .option-sizes {
+    padding: 4px 16px;
+    margin-bottom: 16px;
+    color: #888b94;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.options .option .hidden-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+}
+
+.options .option button {
+    width: 298px;
+    height: 44px;
+    color: #fff;
+    background: #2a81dd;
+    border: #2a81dd;
+    border-radius: 8px;
+    margin: 0 16px 16px 16px;
+}
+
+.options .option button:hover {
+    background: #2277d2;
+    border: #2277d2;
+}
+
+.option:hover {
+    box-shadow: 0 2px 10px rgba(28, 24, 25, 0.1);
+    border-radius: 8px;
+}
+
+.option:hover > .option-points {
+    color: #f33;
+}
+
+.option:hover .hidden-button {
+    visibility: visible;
+}
+
+/* FOOTER */
+
+/* FOOTER */
+
+/* FOOTER */
+
+footer {
+    min-height: 98px;
+    color: #fff;
+    background: #1c1819;
+    position: static;
+    bottom: 0;
+}
+
+.footer-content {
+    max-width: 1400px;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px 24px 32px;
+}
+
+.footer-social .social {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    margin-top: 11px;
+}
+
+.footer-social p {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+}
+
+.social .fa-instagram,
+.social .fa-youtube,
+.social .fa-vk {
+    color: #fff;
+}
+
+.footer-feedback {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.footer-feedback button {
+    width: 150px;
+    height: 36px;
+    background-color: #fff;
+    color: #2a81dd;
+    border: #fff;
+    border-radius: 8px;
+}
+
+.footer-feedback button:hover {
+    background: #d6ecfb;
+    color: #1c1819;
+}
+
+.feedback-text p {
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+}
