--- a/src/css/style.css
+++ b/src/css/style.css
@@ -69,7 +69,7 @@ header .logo {
 }
 
 .active-bar {
-    width: 1040px;
+    min-width: 1040px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
