--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import 'blocks/social.scss';
 @import 'blocks/networks.scss';
 @import 'blocks/feedback.scss';
+@import 'blocks/modal.scss';
 
 * {
     box-sizing: border-box;
